# cosmo_surface_viewer

./: .gitignore  README.md  cosmo_render.py  pyproject.toml  requirements.txt
cosmo_surface_viewer/: __init__.py  cli.py  core.py  io.py  mesh.py  parsers.py  render.py
tests/: test_core.py  test_module_structure.py
